# fajar-wasi-p2

./: Cargo.toml  README.md
src/: component.rs  composition.rs  deployment.rs  filesystem.rs  http.rs  lib.rs  resources.rs  sockets.rs  streams.rs  wit_lexer.rs  wit_parser.rs  wit_types.rs
